fix(tabs): switch from flex center to auto margins for tabs header
https://stackoverflow.com/a/33455342
if flex item overflows its container,
flex center no longer works and some content
is inaccessible. Using margin: auto on the
flex item should center items and scroll properly

--- a/src/components/tabs/styles/CdrTabs.scss
+++ b/src/components/tabs/styles/CdrTabs.scss
@@ -201,8 +201,8 @@
   /* Centered
     ========== */
   &--centered {
-    .cdr-tabs__header {
-      justify-content: center;
+    .cdr-tabs__header-item {
+      margin: auto;
     }
   }
 }
